# truconsts

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: testing.yml
assets/: truconsts.psd
cy_src/: constmeta.c  constmeta.pxd  constmeta.pyx  cpy.c  cpy.pxd  immumeta.c  immumeta.pxd  immumeta.pyx  meta.c  meta.pxd  meta.pyx
dev-docs/: Learnings.md
examples/: async_example.py  examples.md  requirements.txt  simple.py
src/truconsts/: __init__.py  annotations.py  constants.py  constmeta.c  constmeta.pxd  constmeta.pyx  cpy.c  cpy.pxd  cpy.pyx
tests/: test_base.py  test_constantsmeta.py  test_genfuncasync.py  test_immutables.py
truconsts/: __init__.py  _base.py  _base_const.py  _base_immu.py  _types.py  annotations.py
